Configurando jenkisfile